<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_TrafficLightInput" Id="{e56f1dc8-4a56-4c98-a9aa-3554ae6cdab8}">
    <Declaration><![CDATA[TYPE ST_TrafficLightInput :
STRUCT

	bDayMode : BOOL;
	bSetRed : BOOL;
	bSetGreen : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>